apps/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
